probando otra forma

--- a/practica.html
+++ b/practica.html
@@ -9,7 +9,7 @@
 <body>
 <script>
     console.log("este es mi prueba");
-    document("aja cabeza de rifle");
+    document("aja cabeza de rifle jejeje");
 </script>
 </body>
 </html>
