--- a/practica.html
+++ b/practica.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <script>
-    console.log("este es mi prueba");
+    console.log("este es mi prueba jajajajajaja ");
     document("aja cabeza de rifle jejeje");
 </script>
 </body>
